# openligadb.rs

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  LICENSE.md  README.md  all.html  clippy.toml  index.html
.github/: FUNDING.yml
.github/workflows/: bump-version.yaml  debug.yaml  rust-ci.yaml  rust-pr.yaml
data/: match-72395.json
models/: index.html  sidebar-items.js
models/goal/: index.html  sidebar-items.js  struct.Goal.html  struct.GoalGetter.html
models/group/: index.html  struct.Group.html
models/league/: index.html  sidebar-items.js  struct.League.html
models/location/: index.html  struct.Location.html
models/match/: index.html  struct.Match.html
models/result/: index.html  sidebar-items.js  struct.GlobalResultInfo.html  struct.MatchResult.html  struct.ResultInfo.html
models/sport/: index.html  sidebar-items.js  struct.Sport.html
models/table/: index.html  sidebar-items.js  struct.TableTeam.html
models/team/: index.html  sidebar-items.js  struct.Team.html
openspec/changes/cargo-dev-deps/: design.md  proposal.md  tasks.md
openspec/changes/constants-doc-comments/: design.md  proposal.md  tasks.md
openspec/changes/custom-error-type/: design.md  proposal.md  tasks.md
openspec/changes/datetime-fields/: design.md  proposal.md  tasks.md
openspec/changes/group-use-util/: design.md  proposal.md  tasks.md
openspec/changes/match-league-param-type/: design.md  (+2 more)
src/: client.rs  constants.rs  lib.rs  util.rs
src/models/: bundesliga.rs  goal.rs  group.rs  league.rs  location.rs  match.rs  mod.rs  result.rs  sport.rs  table.rs  team.rs
(+9 files in other folders)
