[package]
name = "openligadb"
version = "0.0.1"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.0"
async-trait = "0.1"
actix-web = "4.0"

[dependencies.openssl-sys]
version = "0.9"
features = ["vendored"]

[dev-dependencies]
actix-web = "4.0"
