[package]
name = "openligadb"
description = "Rust library for OpenLigaDB API"
version = "0.0.1"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pilgrimagesoftware/openligadb.rs"
documentation = "https://docs.rs/openligadb"
homepage = "https://github.com/pilgrimagesoftware/openligadb.rs"
keywords = ["openliga", "openligadb", "football", "soccer"]
categories = ["data-structures"]
authors = ["Paul Schifferer <paul@schifferers.net>"]
exclude = [
    "*.orig",
    "data/*",
    ".github/*",
    ".gitignore",
    ".rust-version",
    ".editorconfig",
    ".cargo_vcs_info.json",
]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.0"
async-trait = "0.1"
actix-web = "4.0"
openssl-sys = { version = "0.9", features = ["vendored"] }

[dev-dependencies]
actix-web = "4.0"
cargo-llvm-cov = "0.6"
